GROOVY-3991 Minor implementation changes in the earlier applied exponentiation patch.
git-svn-id: http://svn.codehaus.org/groovy/branches/GROOVY_1_7_X@20765 a5544e8c-8a19-0410-ba12-f9af4593a198